// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`periodic-refresh Renders \`periodic-refresh\` with custom props 1`] = `
<widget-settings-item-stub
  eager="true"
  optional="true"
  title="Periodic refresh"
>
  <periodic-refresh-field-stub
    label=""
    name="customName"
    periodicrefresh="[object Object]"
  />
  <!---->
</widget-settings-item-stub>
`;

exports[`periodic-refresh Renders \`periodic-refresh\` with default props 1`] = `
<widget-settings-item-stub
  eager="true"
  optional="true"
  title="Periodic refresh"
>
  <periodic-refresh-field-stub
    label=""
    name="periodic_refresh"
    periodicrefresh="[object Object]"
  />
  <!---->
</widget-settings-item-stub>
`;

exports[`periodic-refresh Renders \`periodic-refresh\` with errors 1`] = `
<widget-settings-item-stub
  eager="true"
  optional="true"
  title="Periodic refresh"
>
  <periodic-refresh-field-stub
    label=""
    name="custom-name"
    periodicrefresh="[object Object]"
  />
  <!---->
</widget-settings-item-stub>
`;

exports[`periodic-refresh Renders \`periodic-refresh\` with with life watching 1`] = `
<widget-settings-item-stub
  eager="true"
  optional="true"
  title="Periodic refresh"
  withlifewatching="true"
>
  <periodic-refresh-field-stub
    label=""
    name="periodic_refresh"
    periodicrefresh="[object Object]"
  />
  <!---->
</widget-settings-item-stub>
`;
